tests/type_errors/filter_tuple_predicate.nos
# expect_error: Bool
# Filter predicate must return Bool, not tuple
main() = [(1,2),(3,4)].filter(p => p)
